# FFMpeg_Video

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/videolearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/videolearn/: App.kt  BaseActivity.kt  MainActivity.kt  MediaScope.kt  MediaService.kt  VideoScope.kt
app/src/main/java/com/example/videolearn/ffmpeg/: FFMPEGActivity.kt
app/src/main/java/com/example/videolearn/ffmpeg/bean/: VideoBean.kt
app/src/main/java/com/example/videolearn/ffmpegcompose/: FFMPEGComposeActivity.kt  FFMpegActivity.kt  FFMpegComposeActivity.kt
app/src/main/java/com/example/videolearn/ffmpegcompose/bean/: VideoBean.kt
app/src/main/java/com/example/videolearn/live/: ConsumerLive.kt  LiveActivity.kt  LiveAudioEncoder.kt  LiveCameraEncoder.kt  LiveProjectionEncoder.kt  LiveProjectionH264Encoder.kt  RTMPPackage.kt
app/src/main/java/com/example/videolearn/shotscreen/: ShotScreenActivity.kt
app/src/main/java/com/example/videolearn/shotscreen/client/: ClientActivity.kt  ProjectionH264Connect.kt  SocketConnect.kt
app/src/main/java/com/example/videolearn/shotscreen/service/: ProjectionH264Push.kt  ServiceActivity.kt  SocketPush.kt
app/src/main/java/com/example/videolearn/test/: CameraH264Encoder.kt  ParseDataActivity.kt  ProjectionH264Encoder.kt  TestActivity.kt
app/src/main/java/com/example/videolearn/utils/: DisplayUtil.kt  FileUtils.java  H264Codec.kt  ImgHelper.kt  ResultFragment.java  ResultUtils.java  ScreenUtils.kt  YuvUtils.java
app/src/main/java/com/example/videolearn/video/: Constant.kt  H264Push.kt  H264Receive.kt  VideoActivity.kt
app/src/main/java/com/example/videolearn/videocall/: Constant.kt  H264Push.kt  H264Receive.kt  VideoCallActivity.kt
app/src/main/java/com/example/videolearn/videoplay/: VideoPlayActiivty.kt  VideoPlayHelper.kt
app/src/main/res/layout/: actiivty_ss_client.xml  activity_main.xml  activity_parsedata.xml  activity_shotscreen.xml  activity_ss_service.xml  activity_test.xml  activity_video.xml  activity_videoplay.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/videolearn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/src/main/java/com/example/lib/: MyClass.kt
nativelib/: build.gradle
nativelib/src/main/cpp/: CMakeLists.txt  Queue.cpp  Queue.h  ffmpeglib.cpp  livelib.cpp  loghelper.h
nativelib/src/main/cpp/include/libavcodec/: avcodec.h  codec_desc.h  codec_id.h  codec_par.h  d3d11va.h  dxva2.h  packet.h  vaapi.h  vdpau.h  xvmc.h
nativelib/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
nativelib/src/main/cpp/include/libavformat/: avformat.h
nativelib/src/main/cpp/include/libavutil/: buffer.h  display.h  ffversion.h  film_grain_params.h  frame.h  hwcontext_d3d11va.h  mem.h  parseutils.h  pixfmt.h  spherical.h  stereo3d.h
nativelib/src/main/cpp/include/libswscale/: swscale.h
nativelib/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
nativelib/src/main/cpp/play/: FFMpegPlayManager.h
nativelib/src/main/cpp/reader/: FFReader.cpp  FFVideoReader.cpp
nativelib/src/main/java/com/example/nativelib/: FFMpegPlay.kt  NativeLib.kt
play/: build.gradle
play/src/androidTest/java/com/example/play/: ExampleInstrumentedTest.kt
play/src/main/cpp/: CMakeLists.txt  android_av_log.h  globals.h  play-lib.cpp
play/src/main/cpp/config/: OutConfig.cpp  OutConfig.h
play/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  VideoDecoder.cpp  VideoDecoder.h
play/src/main/cpp/include/libavutil/: ffversion.h
play/src/main/cpp/manager/: FFMpegPlayer.cpp  FFMpegPlayer.h
play/src/main/cpp/queue/: AVFrameQueue.cpp  AVFrameQueue.h  AVPacketQueue.cpp  AVPacketQueue.h
play/src/main/cpp/reader/: FFReader.cpp  FFReader.h  FFVideoReader.cpp  FFVideoReader.h
play/src/main/cpp/utils/: CodecUtils.cpp  CodecUtils.h  FFMpegUtils.cpp  Logger.cpp  Logger.h  MutexObj.cpp  MutexObj.h  VideoFrameUtil.cpp  VideoFrameUtil.h  YuvUtil.cpp  YuvUtil.h  loghelper.h
play/src/main/java/com/example/play/: IPaly.kt  IPalyListener.kt  PlayManager.kt  PlayerState.kt  Step.kt
play/src/main/java/com/example/play/config/: OutConfig.kt
play/src/main/java/com/example/play/data/: DecodeData.kt
play/src/main/java/com/example/play/proxy/: FFMpegProxy.kt
play/src/main/java/com/example/play/utils/: FFMpegUtils.kt  LogHelper.kt  MediaScope.kt
rtmplib/: build.gradle
rtmplib/src/androidTest/java/com/example/rtmplib/: ExampleInstrumentedTest.kt
rtmplib/src/main/cpp/: CMakeLists.txt  rtmplib.cpp
rtmplib/src/main/java/com/example/rtmplib/: RtmpLib.kt
rtmplib/src/test/java/com/example/rtmplib/: ExampleUnitTest.kt
sh/: build_ffmpeg.sh  build_ffmpeg_include_264.sh  build_ffmpeg_only1.sh  build_open264.sh  build_x264.sh
videofile/: 16.h264  24px.264  直播源.txt
